refac: code cleanup